--- a/Style/css.css
+++ b/Style/css.css
@@ -17,19 +17,22 @@ body {
   grid-area: name1;
   display: flex;
   align-items: center;
-  width: 400px;
+  width: 600px;
   height: 40px;
   padding-right: 30px;
   background-color: blue;
   border: 2px solid black;
 }
 
-.naglowek_box p span {
-  margin-left: 6px;
+.naglowek_box img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .box1 {
-  width: 400px;
+  width: 600px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-area: box1;
@@ -39,28 +42,22 @@ body {
   gap: 10px;
 }
 
-.box1 .produkt1_box p {
+.box1 .money_box {
+  height: 30px;
+  display: grid;
+  grid-template-columns: 45px 45px 45px 45px;
+  grid-template-rows: 30px;
+  border: 2px solid black;
+  align-items: center;
+}
+
+.box1 .product {
   border: 2px solid red;
 }
 
-.box1 .produkt2_box p {
-  border: 2px solid red;
-}
-
-.box1 .produkt3_box p {
-  border: 2px solid red;
-}
-
-.box1 .produkt4_box p {
-  border: 2px solid red;
-}
-
-.box1 .produkt5_box p {
-  border: 2px solid red;
-}
-
-.box1 .produkt6_box p {
-  border: 2px solid red;
+.box1 img {
+  width: 50px;
+  height: 50px;
 }
 
 .naglowek_box2 {
@@ -73,6 +70,13 @@ body {
   border: 2px solid black;
 }
 
+.naglowek_box2 img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
 .box2 {
   width: 400px;
   display: grid;
@@ -82,28 +86,4 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   gap: 10px;
-}
-
-.box2 .produkt1_box p {
-  border: 2px solid red;
-}
-
-.box2 .produkt2_box p {
-  border: 2px solid red;
-}
-
-.box2 .produkt3_box p {
-  border: 2px solid red;
-}
-
-.box2 .produkt4_box p {
-  border: 2px solid red;
-}
-
-.box2 .produkt5_box p {
-  border: 2px solid red;
-}
-
-.box2 .produkt6_box p {
-  border: 2px solid red;
 }
