--- a/Style/css.scss
+++ b/Style/css.scss
@@ -7,13 +7,16 @@ $font-primary: "sans-serif";
   margin: 0;
 }
 
+
+
 body {
-  font-family: $font-primary;
-  margin-top: 1%;
+  font-size: 11px;
+  font-family: 'Verdana, Geneva, Tahoma, sans-serif';
+  margin-top: 2%;
   justify-content: center;
   display: grid;
   grid-template-areas:
-    "name1 name2"
+    "name1 box2"
     "box1  box2";
   column-gap: 10px;
 }
@@ -22,11 +25,21 @@ body {
   grid-area: name1;
   display: flex;
   align-items: center;
-  width: 641.2px;
+  width: 671.5px;
   height: 40px;
   padding-right: 30px;
-  background-color: blue;
+  background-color: gold;
   border: 2px solid black;
+
+  .cart {
+    display: grid;
+    grid-auto-flow:column;
+    margin-left: 550px;
+    
+    .count1 {
+      margin-left: 5px;
+    }
+  }
 
   img {
     width: 20px;
@@ -36,8 +49,9 @@ body {
   }
 }
 
+
+
 .box1 {
-  width: fit-content;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-area: box1;
@@ -46,6 +60,11 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   gap: 10px;
+  overflow-y: scroll;
+  max-height: 320px;
+
+
+
 
   .product {
     display: grid;
@@ -53,20 +72,21 @@ body {
     grid-template-rows:  20px 25px 65px ;
     grid-template-areas: 
     "img text1"
-    ".   text2"
-    ".   text3"
+    "img text2"
+    "img text3"
     "box1 box1"
     ;
-    border: 2px solid black;
+    border: 2px solid orange;
     border-radius: 2px;
     margin-top: 5px;
     margin-bottom: 5px;
-   
+    padding: 2px;
+    opacity: 90%;
   }
 
   img {
     width: 50px;
-    height: 50px;
+    height: 47px;
     grid-area: img;
     border-radius: 2px;
   }
@@ -74,8 +94,7 @@ body {
   .title {
     margin-left: 5px;
     grid-area: text1;
-    width: fit-content;
-    height: fit-content;
+  
   }
 
   .manufacturer {
@@ -89,6 +108,7 @@ body {
     grid-area: text3;
   }
 
+
   .money_box {
     height: 30px;
     display: grid;
@@ -97,7 +117,7 @@ body {
     grid-template-columns: 49px 49px 49px 49px;
     grid-template-rows: 30px;
     grid-area: box1;
-    border: 0.1px solid black;
+    border: 0.1px solid none;
     align-items: center;
     justify-items:center;
    
@@ -122,7 +142,7 @@ body {
  
   .buy_icon {
     width: 25px;
-    height: 19px;
+    height: 18px;
     margin-top: 2px;
     background-color: white;
   }
@@ -135,13 +155,6 @@ body {
     row-gap: 15px;
     justify-content: center;
   }
-
-//   .min_btn{
-//     width: 14px;
-//     height: 14px;
-//     display: flex;
-//     justify-content: center;
-//   }
 
   .pl, .min {
     width: 9px;
@@ -160,40 +173,108 @@ body {
 
   img {
     width: 20px;
-    height: 20px;
+    height: 18px;
     margin-right: 10px;
     margin-left: 10px;
   }
 
 }
 
-.box2 {
-  width: 400px;
-  display: flex;
-  border: 2px solid black;
-  padding-left: 10px;
-  padding-right: 10px;
-  
 
 
-  .price_box {
-    width:400px ;
-    height: 30px;
-    display: flex;
-    margin-top: 290px;
-    margin-bottom:10px ;
-    align-items: flex-end;
-    border: 2px solid black;
+
+
+
+
+.sidebar{
+  width: fit-content;
+  min-width: 200px;
+  max-height: 420px;
+
+  border-radius: 5px;
+  background-color: #eee;
+  padding: 15px;
+  text-align: center;
+  grid-area: box2;
+  margin-left: 10px;
+  overflow-y: scroll;
+ 
+
+  .cart-item {
+     max-height: 300px;
+    align-items: center;
+    justify-content: space-between;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 40px 40px 40px 50px ;
+    grid-area: name2;
+    gap: 15px;
+    margin: 10px 10px;
+    margin-right: 0;
+   
+    padding: 10px;
+    background-color: white;
+    border-bottom: 1px solid #aaa;
+    border-radius: 3px;
     
   
-    p span {
-        border: 2px solid red;
-    }
+  }
+  .row-img {
+    width: 44px;
+    height: 42px;
+    border-radius: 100px;
+    border: 1px solid goldenrod;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .rowimg {
+    min-width: 20px;
+    max-height: 20px;
+    border-radius: 50%;
+  }
+  .fa-trash:hover {
+    cursor: pointer;
+    color: #333;
+  }
+  
+  .plus_min_btn  button{
+    width: 15px;
+    height: 20.5px;
+     padding-right: 12px;
+     margin-bottom: 4px;
+     
+  }
+  
+  .number {
+   margin: 0 5px 3px 3px;
+  }
+  
+  .foot{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0px;
+    padding: 10px 0px;
+    border-top: 1px solid #333;
+    margin-top: 20px;
+  }
+
+.head{
+      background-color: gold;
+      border-radius: 3px;
+      grid-area: name2;
+      padding: 10px;
+      margin-bottom: 20px;
+      color: white;
+      display: flex;
+      align-items: center;
+  }
 
 
-}
-
-}
+  }
 
 
+  
 
+
+  
