--- a/Style/css.scss
+++ b/Style/css.scss
@@ -7,12 +7,15 @@ $font-primary: "sans-serif";
   margin: 0;
 }
 
-
-
 body {
+  // width: clamp(830px, 50px, 1250px);
+  min-width: 1150px;
+  min-height: 360px;
+
   font-size: 11px;
-  font-family: 'Verdana, Geneva, Tahoma, sans-serif';
+  font-family: "Verdana, Geneva, Tahoma, sans-serif";
   margin-top: 2%;
+  margin-left: 5%;
   justify-content: center;
   display: grid;
   grid-template-areas:
@@ -21,65 +24,84 @@ body {
   column-gap: 10px;
 }
 
+@media(max-width:740px){
+  .body {
+    display: grid;
+    grid-template-areas:
+    "name1"
+    "box1"
+    "box2"
+    ;
+  }
+  }
+
 .naglowek_box {
   grid-area: name1;
   display: flex;
   align-items: center;
-  width: 671.5px;
-  height: 40px;
+  min-width: 671.5px;
+  min-height: 40px;
   padding-right: 30px;
   background-color: gold;
   border: 2px solid black;
+  border-radius: 2px;
 
   .cart {
     display: grid;
-    grid-auto-flow:column;
+    grid-auto-flow: column;
     margin-left: 550px;
-    
+
     .count1 {
       margin-left: 5px;
     }
   }
 
   img {
-    width: 20px;
-    height: 20px;
+    min-width: 20px;
+    min-height: 20px;
     margin-right: 10px;
     margin-left: 10px;
   }
 }
 
-
-
 .box1 {
+  max-height: 320px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-area: box1;
   border: 2px solid black;
   border-radius: 2px;
-  padding-left: 10px;
-  padding-right: 10px;
-  gap: 10px;
+  padding-left: 7px;
+  gap: 8.5px;
   overflow-y: scroll;
-  max-height: 320px;
+  // padding-top:2px ;
 
-
-
+  .product-name {
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    font-size: 1.14em;
+    letter-spacing: 0.2px;
+    margin-bottom: 0.6px;
+    min-height: 0px;
+  }
+  .manufacturer {
+    font-size: 1.01em;
+    margin-top: 2px;
+  }
 
   .product {
     display: grid;
-    grid-template-columns: 61px 135px ;
-    grid-template-rows:  20px 25px 65px ;
-    grid-template-areas: 
-    "img text1"
-    "img text2"
-    "img text3"
-    "box1 box1"
-    ;
+    grid-template-columns: 62px 150px;
+    grid-template-rows: 30px 25px 65px; 
+    // było 20px
+    grid-template-areas:
+      "img text1"
+      "img text2"
+      "img text3"
+      "box1 box1";
     border: 2px solid orange;
     border-radius: 2px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    // margin-top: 5px;
+    gap: 2px;
     padding: 2px;
     opacity: 90%;
   }
@@ -91,55 +113,45 @@ body {
     border-radius: 2px;
   }
 
-  .title {
-    margin-left: 5px;
-    grid-area: text1;
-  
-  }
-
   .manufacturer {
-    margin-left: 5px;
+    margin-left: 3px;
     grid-area: text2;
-
   }
 
   .description {
-    margin-left: 5px;
+    margin-left: 3px;
     grid-area: text3;
+    line-height: 11.5px;
   }
 
-
   .money_box {
-    height: 30px;
+    min-height: 30px;
     display: grid;
     grid-auto-flow: row;
-    
-    grid-template-columns: 49px 49px 49px 49px;
+
+    grid-template-columns: 51px 51px 51px 51px;
     grid-template-rows: 30px;
     grid-area: box1;
     border: 0.1px solid none;
     align-items: center;
-    justify-items:center;
-   
+    justify-items: center;
   }
 
   .price {
     padding-top: 5px;
     height: 29px;
     border-right: 1px solid red;
-    
   }
   button {
     background-color: white;
     border: 0;
     cursor: pointer;
 
-    &:hover{
-        transform: scale(1.025);
+    &:hover {
+      transform: scale(1.025);
     }
   }
-  
- 
+
   .buy_icon {
     width: 25px;
     height: 18px;
@@ -147,26 +159,27 @@ body {
     background-color: white;
   }
 
-
-  .pl_btn, .min_btn {
-    width: 14px;
-    height: 13px;
+  .pl_btn,
+  .min_btn {
+    min-width: 14px;
+    min-height: 13px;
     display: flex;
     row-gap: 15px;
     justify-content: center;
   }
 
-  .pl, .min {
+  .pl,
+  .min {
     width: 9px;
-    height: 9px; 
+    height: 9px;
   }
 }
 
 .naglowek_box2 {
   display: flex;
   align-items: center;
-  width: 400px;
-  height: 40px;
+  min-width: 400px;
+  min-height: 40px;
   padding-right: 30px;
   background-color: blue;
   border: 2px solid black;
@@ -177,16 +190,9 @@ body {
     margin-right: 10px;
     margin-left: 10px;
   }
-
 }
 
-
-
-
-
-
-
-.sidebar{
+.sidebar {
   width: fit-content;
   min-width: 200px;
   max-height: 420px;
@@ -198,26 +204,23 @@ body {
   grid-area: box2;
   margin-left: 10px;
   overflow-y: scroll;
- 
 
   .cart-item {
-     max-height: 300px;
+    max-height: 300px;
     align-items: center;
     justify-content: space-between;
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 40px 40px 40px 50px ;
+    grid-template-columns: 40px 40px 40px 50px;
     grid-area: name2;
     gap: 15px;
     margin: 10px 10px;
     margin-right: 0;
-   
+
     padding: 10px;
     background-color: white;
     border-bottom: 1px solid #aaa;
     border-radius: 3px;
-    
-  
   }
   .row-img {
     width: 44px;
@@ -237,20 +240,25 @@ body {
     cursor: pointer;
     color: #333;
   }
-  
-  .plus_min_btn  button{
-    width: 15px;
-    height: 20.5px;
-     padding-right: 12px;
-     margin-bottom: 4px;
-     
+
+  .plButton,
+  .minButton {
+    max-width: 21.5px;
+    max-height: 25px;
+    background-color: white;
+    border: none;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.115);
+    }
   }
-  
+
   .number {
-   margin: 0 5px 3px 3px;
+    margin: 2.8px;
   }
-  
-  .foot{
+
+  .foot {
     display: flex;
     justify-content: space-between;
     margin: 20px 0px;
@@ -259,22 +267,14 @@ body {
     margin-top: 20px;
   }
 
-.head{
-      background-color: gold;
-      border-radius: 3px;
-      grid-area: name2;
-      padding: 10px;
-      margin-bottom: 20px;
-      color: white;
-      display: flex;
-      align-items: center;
+  .head {
+    background-color: gold;
+    border-radius: 3px;
+    grid-area: name2;
+    padding: 10px;
+    margin-bottom: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
   }
-
-
-  }
-
-
-  
-
-
-  
+}
