--- a/Style/css.scss
+++ b/Style/css.scss
@@ -19,21 +19,12 @@ body {
   justify-content: center;
   display: grid;
   grid-template-areas:
-    "name1 box2"
+    "name1 name2"
     "box1  box2";
   column-gap: 10px;
 }
 
-@media(max-width:740px){
-  .body {
-    display: grid;
-    grid-template-areas:
-    "name1"
-    "box1"
-    "box2"
-    ;
-  }
-  }
+
 
 .naglowek_box {
   grid-area: name1;
@@ -92,7 +83,6 @@ body {
     display: grid;
     grid-template-columns: 62px 150px;
     grid-template-rows: 30px 25px 65px; 
-    // było 20px
     grid-template-areas:
       "img text1"
       "img text2"
@@ -135,13 +125,25 @@ body {
     border: 0.1px solid none;
     align-items: center;
     justify-items: center;
-  }
 
-  .price {
+
+    .input {
+      max-width: 38px;
+      max-height: 19px;
+      padding-left: 14px;
+      border: none;
+      overflow-y: hidden;
+    &::-webkit-outer-spin-button, ::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+    }
+    }
+
+     .price {
     padding-top: 5px;
     height: 29px;
     border-right: 1px solid red;
   }
+
   button {
     background-color: white;
     border: 0;
@@ -151,6 +153,10 @@ body {
       transform: scale(1.025);
     }
   }
+
+  }
+
+ 
 
   .buy_icon {
     width: 25px;
@@ -193,9 +199,9 @@ body {
 }
 
 .sidebar {
-  width: fit-content;
+  
   min-width: 200px;
-  max-height: 420px;
+  max-height: 320px;
 
   border-radius: 5px;
   background-color: #eee;
@@ -207,6 +213,7 @@ body {
 
   .cart-item {
     max-height: 300px;
+    max-width: 320px;
     align-items: center;
     justify-content: space-between;
     display: grid;
@@ -277,4 +284,24 @@ body {
     display: flex;
     align-items: center;
   }
+}
+
+
+ul{
+ 
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  grid-area: name2;
+}
+ul li{
+  list-style: none;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 5px 10px;
+  margin: 0 10px;
+  cursor: pointer;
+  font-size: 1.2em;
+}
+ul li.active{
+  background-color: rgba(41, 255, 41, 0.897);
 }
